# firmwareTemplate

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  codeql.yml
cmake/: arm-gcc-toolchain.cmake
firmware/: CMakeLists.txt
firmware/app/: CMakeLists.txt  main.cpp
firmware/app/src/: main.cpp
firmware/core/: CMakeLists.txt
firmware/core/logger/: logger.cpp  logger.hpp  logger_backend.hpp
firmware/core/ringbuffer/: ringbuffer.cpp  ringbuffer.hpp
firmware/drivers/: CMakeLists.txt
firmware/drivers/uart/: uart.cpp  uart.hpp  uart_logger_backend.cpp  uart_logger_backend.hpp
firmware/platform/: CMakeLists.txt
firmware/platform/mcu_name/: CMakeLists.txt
firmware/platform/mcu_name/cmsis/device/src/: stubToBeRemoved.c
firmware/services/: CMakeLists.txt
scripts/: build.sh  clang-format.sh  clang-tidy.sh  codeql.sh  cppcheck.sh  flash_jlink.sh  static_analysis.sh
scripts/config/: clang-tidy.yaml
tests/: CMakeLists.txt
tests/core/: test_logger.cpp  test_ringbuffer.cpp
